tests/markups/fail-5.expected
ERROR: Value of 'strikethrough_color' attribute on <span> tag on line 1 could not be parsed; should be a color specification, not 'rot'