tests/markups/fail-5.markup
<span strikethrough_color="rot">Text</span>
